core/b2b/core-services/docs-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-portal
  namespace: docs-portal
spec:
  selector:
    app: docs-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
