core/b2b/core-services/docs-portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-portal-ingress
  namespace: docs-portal
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - docs.ka0s.io
      secretName: docs-ka0s-tls
  rules:
    - host: docs.ka0s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-portal
                port:
                  number: 80
